<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_string">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiche">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your Name</string>
    <string name="enter_address_hint">Enter your Address</string>
    <string name="adress_label">Adress</string>
    <string name="enter_phone_hint">Enter Phone Number</string>
    <string name="note_label">Note</string>
    <string name="enter_note_hint">Enter a Note</string>
    <string name="choose_a_delivery_method">Choose a delivery method</string>
    <string name="same_day_messenger_service">Same day delivery</string>
    <string name="next_day_messenger_service">next day delivery</string>
    <string name="pickup_messenger_service">pickup</string>
    <string name="phone">Phone</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
